# midi-hub

./: Cargo.toml  README.md  ble-midi-bridge.service  config.json.sample  pair-and-connect.sh
scripts/: install.sh
src/: main.rs
