[package]
name = "midi-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = "0.11"
midir = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
uuid = "1.0"
log = "0.4"
env_logger = "0.11"
zbus = { version = "3", default-features = false, features = ["tokio"] }
zvariant = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
